# lgblkb-navigation

./: .gitignore  AUTHORS  ChangeLog  Pipfile  README.md  install_deps.py  release.py  requirements.txt  setup.cfg  setup.py
egistic_navigation/: boustrophedon_case_1.py  case_1.py  configs.yaml  configs_lgblkb.yaml  deap_1.py  deap_2.py  global_support.py  gym_workout.py  katana_case.py  poly2trap.py  qweqwe.py  seidel.py  snow.geojson  the_main.py  vis_utils.py
egistic_navigation/base_geometry/: geom_utils.py  line_utils.py  point_utils.py  poly_utils.py
egistic_navigation/field_geometry/: check.py  field_utils.py
egistic_navigation/utils/: google_way.py
lgblkb_navigation/: deap_1.py  global_support.py  gym_workout.py  navi_2.py  poly2trap.py  the_main.py  vis_utils.py
lgblkb_navigation/base_geometry/: geom_utils.py  line_utils.py  point_utils.py  poly_utils.py
lgblkb_navigation/field_geometry/: field_utils.py
lgblkb_navigation/utils/: google_way.py
scripts/: nav_test.geojson  testik_2.py  testik_dash.py  xmlchim.py
