[bumpversion]
current_version = 0.0.1
commit = True
tag = True

[metadata]
name = lgblkb-navigation
author = Dias Bakhtiyarov
author-email = dbakhtiyarov@nu.edu.kz
summary = Tools to navigate easier
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
license = BSD
keywords = 
	setup
	distutils

[files]
packages = 
	lgblkb_navigation

;[options.extras_require]
;geojsonio = geojsonio

